<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.nick.scorch.teams.TeamPlayerSelection">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/players"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:elevation="2dp">

            <Button
                android:text="@string/team_back_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btnborder"
                android:id="@+id/backBtn"
                android:contentDescription="@string/team_back"/>
            <Button
                android:text="@string/team_create_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btnborder"
                android:id="@+id/createBtn"
                android:contentDescription="@string/team_create"/>
        </LinearLayout>


    </LinearLayout>



</FrameLayout>
