<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.dev.nick.scorch.tournaments.TournamentSelectTitle">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/tourn_title"
                android:id="@+id/tourneyName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:elevation="2dp">

            <Button
                android:text="@string/tourn_cancel"
                android:contentDescription="@string/tourn_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btnborder"
                android:id="@+id/cancelBtn"/>
            <Button
                android:text="@string/tourn_next"
                android:contentDescription="@string/tourn_next"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btnborder"
                android:id="@+id/nextBtn"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
