<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.dev.nick.scorch.teams.TeamName">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7">
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <RadioButton android:id="@+id/radio_players"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/players"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio"
                    android:gravity="center"
                    android:textSize="40dp"
                    android:textColor="#666"/>
                <RadioButton android:id="@+id/radio_teams"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/teams"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio"
                    android:gravity="center"
                    android:textSize="40dp"
                    android:textColor="#666"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:elevation="2dp">

            <Button
                android:text="@string/game_cancel"
                android:contentDescription="@string/game_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btnborder"
                android:id="@+id/cancelBtn"/>
            <Button
                android:text="@string/game_next"
                android:contentDescription="@string/game_next"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btnborder"
                android:id="@+id/nextBtn"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
