<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.dev.nick.scorch.teams.TeamName">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/team_name_hint"
                android:id="@+id/teamName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:elevation="2dp">

            <Button
                android:text="@string/team_name_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btnborder"
                android:id="@+id/cancelBtn"
                android:contentDescription="@string/team_name_cancel"/>
            <Button
                android:text="@string/team_name_next"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/btnborder"
                android:id="@+id/nextBtn"
                android:contentDescription="@string/team_name_next"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
